# mcp-kanboard

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/extend-kanboard-mcp/: SKILL.md
scripts/: setup.ps1  start-web.ps1  stop-web.ps1
src/mcp_kanboard/: __main__.py  client.py  config.py  errors.py  guards.py  oauth.py  server.py  smoke.py
src/mcp_kanboard/tools/: __init__.py  categories.py  comments.py  files.py  groups.py  projects.py  search.py  subtasks.py  tags.py  tasks.py  time_tracking.py  users.py
