[project]
name = "mcp-kanboard"
version = "0.1.0"
description = "Model Context Protocol server for Kanboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.scripts]
mcp-kanboard = "mcp_kanboard.server:main"
mcp-kanboard-smoke = "mcp_kanboard.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_kanboard"]
